# My_PortFolio

./: README.md  package-lock.json  package.json  pyproject.toml  render.yaml
Frontend/: .env  .gitignore  README.md  package-lock.json  package.json  vite.config.js
Frontend/app/: store.jsx
Frontend/locales/en/: translation.json
Frontend/locales/fr/: translation.json
Frontend/locales/zh/: translation.json
Frontend/src/: App.jsx  axiosInstance.js  i18n.js  jsconfig.json  main.jsx  theme_dashboard.js
Frontend/src/components/: Hero.jsx
Frontend/src/components/About/: About.jsx
Frontend/src/utils/: motion.js
Server/: .env  .gitignore  README.md  manage.py  pyproject.toml  render.yaml  requirements.txt
Server/Contact/: models.py  serializers.py  urls.py  views.py
Server/Contact/migrations/: 0001_initial.py  0002_alter_contact_options_contact_is_read.py
Server/Experience/: apps.py
Server/Resume/: models.py  serializers.py  urls.py  views.py
Server/Resume/migrations/: 0001_initial.py
Server/env/: pyvenv.cfg
Server/env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  find_similar_images.py  get_gprof  get_objgraph  jp.py  jsonpointer  undill
Server/portfolio/: asgi.py  local_settings.py  settings.py  urls.py  wsgi.py
src/: App.jsx  main.jsx  theme.js
src/components/About/: About.jsx
src/components/Blog/: Blog.jsx
src/components/Contact/: Contact.jsx
src/components/Experience/: Experience.jsx
src/components/Home/: Home.jsx
src/components/Loader/: Loader.jsx
src/components/NOTFOUND/: NotFound.jsx
src/components/PortFolioLogo/: PortfolioLogo.jsx
src/components/Projects/: Projects.jsx
src/components/Resume/: Resume.jsx
src/components/canvas/: Computers.jsx  Earth.jsx  Stars.jsx  index.js
src/constants/: index.js
(+18 files in other folders)
