[tool.poetry]
name = "my-portfolio"
version = "0.1.0"
description = "A personal portfolio project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14"
whitenoise = "^6.0.0"
django-cors-headers = "^3.14.0"
python-decouple = "^3.8"
djangorestframework-simplejwt = "^5.5.0"
django-celery-beat = "^2.7.0"
django-debug-toolbar = "^5.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
